<resources>
    <string name="app_name">Secret Folder</string>
    <string name="action_settings">Log in</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">View</string>
    <string name="third_fragment_label">Setup</string>
    <string name="login">Enter</string>
    <string name="previous">Previous</string>

    <string name="enter_pin">Enter pin</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loginError">Wrong PIN</string>
    <string name="set_up_a_pin_code">Set up a PIN code</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_set_up">PIN set up!</string>
    <string name="DELETE">DELETE</string>
    <string name="image_fullscreen">Image\nfullscreen</string>
    <string name="loaded_image">Loaded Image</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="delete_confirm">Do you want to delete the original file?</string>
    <string name="yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="original_image_is_kept">Original image is kept</string>
    <string name="original_image_is_deleted">Original image is deleted</string>
    <string name="error_original_img_not_deleted">Error: original image was not deleted!</string>
    <string name="connected_to_google">Connected to Google Account</string>
    <string name="connection_to_google_failed">Connection to Google Failed!</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="refresh">Refresh</string>
    <string name="login_anonymously">Login anonymously</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="next">Next</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="settings">Settings</string>
    <string name="set_up_an_icon">Set up an icon</string>

    <string name="icon_short">SF</string>
    <string name="icon_long">SF</string>
    <string name="icon_incompatible">SF incompatible</string>
    <string name="shortcuts_not_supported">Shortcuts are not supported</string>
    <string name="local">Local</string>
    <string name="server">Local&amp;Server</string>
    <string name="where_delete">Where you want to delete from?</string>

</resources>
